# projet-biblio-multimedia

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml
biblio/: .gitignore  CMakeLists.txt  Info.plist.in  SIFT_FLANN_matching_Demo.cpp  camerahandler.cpp  camerahandler.h  camerawidget.cpp  camerawidget.h  camerawidget.ui  cannon.cpp  cannon.h  fruit.cpp  fruit.h  gameoverdialog.cpp  gameoverdialog.h  gamewidget.cpp  gamewidget.h  gamewidget.ui  gamewindow.cpp  gamewindow.h  gamewindow.ui  katana.cpp  katana.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingswindow.cpp  settingswindow.h  settingswindow.ui  spherewidget.cpp  spherewidget.h  test_detectmultiscale.cpp
